Conflicts: 	src/main/Application.java 	src/main/algorithms/MBase.java 	src/main/resources/74L85.025.matrix